# kumpun

./: .gitignore  Cargo.toml  LICENSE  README.md
@kumpun/: Cargo.toml
@kumpun/cli/: Cargo.toml
@kumpun/cli/src/: main.rs
@kumpun/cli/src/kumpun/: commands.rs
@kumpun/cli/src/kumpun/args/: cli.rs
@kumpun/cli/src/kumpun/commands/: check.rs  dev.rs  docs.rs  generate.rs
@kumpun/cli/src/kumpun/commands/generate/: schema_to_rust.rs
@kumpun/cli/src/kumpun/utils/: logger.rs
@kumpun/cli/tests/: cli_comment_doc_test.rs  cli_cross_file_ref.rs  cli_cross_file_ref_generation.rs  cli_default_const_test.rs  cli_everything.rs  cli_generate.rs  cli_generate_everything.rs  cli_json_schema_org.rs  cli_mod_rs_test.rs  cli_pattern_properties.rs  cli_serde_use_test.rs  cli_simple.rs  cli_snake_case_test.rs  cli_validation_test.rs  common.rs  setup.rs
@kumpun/cli/tests/fixtures/schemas/: default_const_test.schema.json  draft-04.schema.json  everything.example.json  main.schema.json  pattern.schema.json  user.login.json  validation.schema.json
@kumpun/cli/tests/fixtures/schemas/shared/: address.json
@kumpun/cli/tests/fixtures/schemas/shared/gadget/: item.json
@kumpun/core/: Cargo.toml
@kumpun/core/src/: lib.rs
@kumpun/schema/: Cargo.toml
@kumpun/schema/src/: lib.rs
cli/: Cargo.toml
cli/src/kumpun/commands/: dev.rs
core/src/: lib.rs
features/: SCHEMA_FEATURES.md
schemas/: Cargo.toml  user.create.json
schemas/src/: lib.rs
