[package]
name = "kumpun-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
kumpun-core = { path = "../core" }
kumpun-schema = { path = "../schema" }
clap = { version = "4.5.36", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.21.3"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.17"